# task_monitor

./: .gitignore  README.md
task-dashboard/: .firebaserc  bun.lockb  package-lock.json  package.json  tailwind.config.js
task-dashboard/src/: App.tsx  Charts.tsx  main.tsx
task-dashboard/src/components/: Monitor.tsx  Performance.tsx  SideBar.tsx  TopBar.tsx
task-dashboard/src/components/metrics/: Metric.tsx  MetricChart.tsx  MetricDetails.tsx  MetricList.tsx
task-dashboard/src/firebase/: index.ts
task-dashboard/src/interfaces/: metric.ts
task-monitor-service/: .env  Cargo.toml  Dockerfile  build.rs
task-monitor-service/proto/: sysinfo.proto
task-monitor-service/src/: config.rs  main.rs  metrics.rs  strategy.rs
task-monitor-service/src/grpc/: grpc_strategy.rs  mod.rs  system_monitor.rs
task-monitor-service/src/redis/: client.rs  mod.rs  redis_strategy.rs  stream.rs
task-report-service/: .firebaserc  Dockerfile  firebase.json  package-lock.json  package.json
task-report-service/src/: index.ts
task-report-service/src/models/: SystemInfo.ts
