[package]
name = "task_monitor_service"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.13"
sysinfo = "0.30.13"
tokio = { version = "1", features = ["full"] }
tonic = "0.12.0"
tokio-stream = "0.1"
serde = { version = "1.0.197", features = ["derive"] }
async-stream = "0.2"
bincode = "1.3.3"
chrono = "0.4.34"
serde_json = "1.0.120"
local-ip-address = "0.6.1"
dotenv = "0.15.0"

[build-dependencies]
tonic-build = "0.12.0"
