[package]
name = "task_monitor_service"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.13.3"
sysinfo = "0.32.0"
tokio = { version = "1.36.0", features = ["full"] }
tonic = "0.12.0"
tokio-stream = "0.1.16"
serde = { version = "1.0.197", features = ["derive"] }
async-stream = "0.3.6"
bincode = "1.3.3"
chrono = "0.4.34"
serde_json = "1.0.128"
local-ip-address = "0.6.1"
dotenv = "0.15.0"
redis = { version = "0.27.4", features = ["async-std-rustls-comp"] }
async-trait = "0.1.83"
futures = "0.3.30"

[build-dependencies]
tonic-build = "0.11.0"
